--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,12 +1,12 @@
 body { padding: 0; margin: 0 }
 #unity-container { position: absolute }
-#unity-container { left: 50%; top: 50%; transform: translate(-50%, -50%) }
+#unity-container { width: 100%; height: 100% }
 #unity-canvas { background: #FFFFFF }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-dark.png') no-repeat center }
 #unity-progress-bar-full { width: 0%; height: 18px; margin-top: 10px; background: url('progress-bar-full-dark.png') no-repeat center }
-#unity-footer { position: relative }
+#unity-footer { position: fixed; width: 100%; bottom: 0; margin-top: 5px; line-height: 38px; }
 #unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
