--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,7 +1,7 @@
 body { padding: 0; margin: 0 }
 #unity-container { position: absolute }
 #unity-container { width: 100%; height: 100% }
-#unity-canvas { background: #FFFFFF }
+#unity-canvas { background: #231F20 }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
 #unity-progress-bar-empty { width: 141px; height: 18px; margin-top: 10px; margin-left: 6.5px; background: url('progress-bar-empty-dark.png') no-repeat center }
